# cmakeperf

./: README.md  pyproject.toml
src/cmakeperf/: cli.py
