[project]
name = "cmakeperf"
version = "0.4.0"
description = "Measure compilation performance from cmake compilation database"
authors = [{name="Paul Gessinger", email="hello@paulgessinger.com"}]
license = "MIT"

requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "psutil>=6.1.0",
    "tabulate>=0.9.0",
]

[project.scripts]
cmakeperf = "cmakeperf.cli:main"

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
